--- a/links/.htaccess
+++ b/links/.htaccess
@@ -3,4 +3,6 @@
 # way too often...
 #
 Redirect	/links/win64abi		http://msdn.microsoft.com/en-us/library/7kcdt6fy.aspx
-Redirect	/links/unix64abi	http://www.x86-64.org/documentation/abi.pdf
+Redirect	/links/unixabi		http://github.com/hjl-tools/x86-psABI/wiki/X86-psABI/
+Redirect	/links/unix64abi	http://github.com/hjl-tools/x86-psABI/wiki/X86-psABI/
+Redirect	/links/unix32abi	http://github.com/hjl-tools/x86-psABI/wiki/X86-psABI/
