.htaccess: no reason to specify sort order
Sort order is now controlled on the server

--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@ Redirect "/src"		"https://github.com/netwide-assembler/nasm.git"
 Redirect "/bugs"	"https://bugzilla.nasm.us"
 Redirect "/bugzilla"	"https://bugzilla.nasm.us"
 Redirect "/forum"	"https://forum.nasm.us"
-Redirect "/download"	"/pub/nasm/releasebuilds/?C=M;O=D"
+Redirect "/download"	"/pub/nasm/releasebuilds"
 Redirect "/snapshot"	"/pub/nasm/snapshots/latest"
 Redirect "/stable"	"/pub/nasm/stable"
 Redirect "/testing"	"/pub/nasm/testing"
